# Wishlair1

./: .gitignore  make-release-windows.ps1  package.json  release.ps1  staticwebapp.config.json  webpack.config.js
.github/workflows/: azure-static-web-apps-happy-ocean-07d69340f.yml
Art/Daniel/Daughter/: daughter.aseprite
Art/Daniel/Entities/: shrooms.aseprite
Art/Daniel/forest-tileset/: grass_cave_tileset.pyxel
Art/Daniel/forest_mockup/: forest_level_mockup.aseprite
Art/Daniel/log_bridges/: log-bridge.pyxel
TexturePackerExporters/NomadExporter/: exporter.xml  template.json
nomad/: .gitignore  Clion code style.xml  README.md
nomad/src/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt
nomad/src/app/nomad/: main.cpp
nomad/src/include/nomad/: Nomad.hpp  nomad.hpp
nomad/src/include/nomad/compiler/: Argument.hpp  Compiler.hpp  CompilerException.hpp  Expression.hpp  FormatStringCompiler.hpp  Identifier.hpp  Operators.hpp  Parser.hpp  ScriptBuilder.hpp  StatementCompilers.hpp  StatementParsers.hpp  SyntaxTree.hpp  Tokenizer.hpp
nomad/src/include/nomad/compiler/statements/: ReturnStatement.hpp
nomad/src/include/nomad/debug/: DebugConsole.hpp  DebugDraw.hpp  Decompiler.hpp
nomad/src/include/nomad/game/: ActionManager.hpp  Alignment.hpp  Body.hpp  Canvas.hpp  Cardinal.hpp  Color.hpp  Entity.hpp  EntityVariableContext.hpp  Event.hpp  Game.hpp  GameExecutionContext.hpp  GameFactory.hpp  GameStatementParsers.hpp  InputManager.hpp  Layer.hpp  Scene.hpp  SceneVariableContext.hpp  System.hpp  TileMap.hpp
nomad/src/include/nomad/geometry/: Circle.hpp  CircleF.hpp  Geometry.hpp  Intersection.hpp  Point.hpp  PointF.hpp  Rectangle.hpp  RectangleF.hpp
nomad/src/include/nomad/log/: ConsoleSink.hpp  Logger.hpp  MemorySink.hpp
nomad/src/include/nomad/resource/: Animation.hpp  AnimationSet.hpp  Font.hpp  Resource.hpp  ResourceManager.hpp  Sprite.hpp  SpriteAtlas.hpp  Text.hpp  Texture.hpp
nomad/src/include/nomad/script/: Command.hpp  Commands.hpp  Documentation.hpp  DynamicVariable.hpp  FormatString.hpp  Instructions.hpp  Interpreter.hpp  OpCode.hpp  Runtime.hpp  Script.hpp  ScriptValue.hpp  StringOperators.hpp  Type.hpp  Variable.hpp  VariableContext.hpp
nomad/src/include/nomad/system/: Boolean.hpp  FastHeap.hpp  Float.hpp  Integer.hpp  Memory.hpp  String.hpp  TempHeap.hpp
nomad/src/src/nomad/: nomad.cpp
nomad/src/src/nomad/compiler/: Argument.cpp  Compiler.cpp  Expression.cpp  FormatStringCompiler.cpp  Operators.cpp  Parser.cpp  ScriptBuilder.cpp  StatementCompilers.cpp  StatementParsers.cpp  SyntaxTree.cpp  Tokenizer.cpp
nomad/src/src/nomad/compiler/statements/: ReturnStatement.cpp
nomad/src/src/nomad/debug/: DebugConsole.cpp  DebugDraw.cpp  Decompiler.cpp
nomad/src/src/nomad/game/: ActionManager.cpp  Alignment.cpp  Body.cpp  Canvas.cpp  Cardinal.cpp  Color.cpp  Entity.cpp  EntityVariableContext.cpp  Event.cpp  Game.cpp  GameExecutionContext.cpp  GameFactory.cpp  GameStatementParsers.cpp  InputManager.cpp  Layer.cpp  Scene.cpp  Scene.load_tile_map.cpp  Scene.render.cpp  Scene.update.cpp  SceneVariableContext.cpp  System.cpp  TileMap.cpp  Window.cpp
nomad/src/src/nomad/game/commands/: EntityCommands.cpp  GameCommands.cpp  InputCommands.cpp  OtherEntityCommands.cpp  SceneCommands.cpp  ThisEntityCommands.cpp  WindowCommands.cpp  _EntityCommands.inl
nomad/src/src/nomad/game/variables/: GameDynamicVariables.cpp  InputDynamicVariables.cpp  OtherDynamicVariables.cpp  SceneDynamicVariables.cpp  ThisDynamicVariables.cpp  WindowDynamicVariables.cpp  _EntityDynamicVariables.inl
nomad/src/src/nomad/geometry/: Circle.cpp  CircleF.cpp  Intersection.cpp  Point.cpp  PointF.cpp  Rectangle.cpp  RectangleF.cpp
nomad/src/src/nomad/log/: ConsoleSink.cpp  Logger.cpp  MemorySink.cpp
nomad/src/src/nomad/resource/: Animation.cpp  AnimationSet.cpp  Font.cpp  Resource.cpp  ResourceManager.cpp  Sprite.cpp  SpriteAtlas.cpp  Text.cpp  Texture.cpp
nomad/src/src/nomad/script/: Command.cpp  Commands.cpp  Documentation.cpp  DynamicVariable.cpp  FormatString.cpp  Instructions.cpp  Interpreter.cpp  OpCode.cpp  Runtime.cpp  RuntimeOpCodes.cpp  Script.cpp  ScriptValue.cpp  StringOperators.cpp  Type.cpp  Variable.cpp  VariableContext.cpp
nomad/src/src/nomad/system/: FastHeap.cpp  Memory.cpp  String.cpp  TempHeap.cpp
nomad/src/test/: CMakeLists.txt  Compiler.Test.cpp  FormatString.Test.cpp  Interpreter.Test.cpp  Parser.Test.cpp  test_main.cpp
phaser/:  staticwebapp.config.json  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
phaser/raw/: daugther.tps  forest.tps
phaser/raw/world/: entities.tsj  wishlair-entrance-1.tmj  wishlair-entrance-1.tmx  wishlair.tiled-session  wishlair.tsj  wishlair.tsx
phaser/src/: Window.d.ts  index.ts  wishlair.ts
phaser/src/controllers/: EntityController.ts  PlayerController.ts
phaser/static/: daughter.json
public/: index.html  styles.css
raw/: daugther.tps  forest.tps
raw-old/maps/: TestObject.tx  wishlair1.tiled-session
raw/maps/: test.tmx  wishlair1.tiled-session
raw/sprites/: daughter.aseprite  daugther.tps  forest.tps  ui.tps
raw/system/: camera.aseprite  down.aseprite  text.aseprite  up.aseprite
raw/ui/: dialog-box-long.aseprite  dialog-box-v.aseprite
raw/world/: boundary.aseprite  boundary.tsj  entities.tsj  test-1.tmj  tileset.aseprite  wishlair-entrance-1.tmj  wishlair-entrance-2.tmj  wishlair-entrance.tmj  wishlair.tiled-session  wishlair.tsj  wishlair.world
res/mappings/: player.input.json
res/mods/: README.txt
res/scripts/: init.nomad
res/sprites/: daughter.atlas.json  forest.atlas.json  ui.atlas.json
res/text/: text.csv
res/world/: entities.tsj  test-1.tmj  wishlair-entrance-1.tmj  wishlair-entrance.tmj  wishlair..tsj
src/: Window.d.ts  index.ts
src/entities/: Entity.ts  EntityDefinition.ts  LevelGameObject.ts  LevelLayer.ts  Player.ts  WishlairSprite.ts
src/scenes/: DebugScene.ts  LoadScene.ts  WishlairScene.ts
src/wishlair/: Configuration.ts  Constants.ts  Directions.ts  Inventory.ts  Room.ts  System.ts  Wishlair.ts  World.ts
(+96 files in other folders)
